20 min - added TestNG Listeners and Allure report